--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ body {
 
 .filename {
   display:inline-block;
+  vertical-align: bottom;
   white-space: nowrap;
   overflow: clip;
   text-overflow: ellipsis;
